Incorporated data spliting code into data importing code

--- a/CNNModel.ipynb
+++ b/CNNModel.ipynb
@@ -109,10 +109,10 @@
     }
    ],
    "source": [
-    "x_data, y_data = DataImport.import_data(INPUT_FILE, DEVICE)\n",
+    "x_train, x_val, x_test, y_train, y_val, y_test = DataImport.import_data(INPUT_FILE, DEVICE)\n",
     "model = CNNModel()\n",
-    "print(\"input shape\" + str(x_data.shape))\n",
-    "test_output = model(x_data)\n",
+    "print(\"input shape\" + str(x_train.shape))\n",
+    "test_output = model(x_train)\n",
     "print(\"output shape\" + str(test_output.shape))\n",
     "# print(test_output)"
    ],
