--- a/CNNModel.ipynb
+++ b/CNNModel.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 39,
    "metadata": {
     "collapsed": true,
     "pycharm": {
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 40,
    "outputs": [],
    "source": [
     "DEBUG = True\n",
@@ -38,36 +38,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 41,
    "outputs": [],
    "source": [
     "class CNNModel(nn.Module):\n",
     "    def __init__(self, device='cpu'):\n",
     "        super().__init__()\n",
-    "        self.conv1 = nn.Conv2d(1, 1, 5, padding=(2, 1), padding_mode=\"reflect\")\n",
-    "        self.conv2 = nn.Conv2d(1, 1, 5, padding=(2, 1), padding_mode=\"reflect\")\n",
-    "        self.conv3 = nn.Conv2d(1, 1, 5, padding=(2, 1), padding_mode=\"reflect\")\n",
-    "        self.conv4 = nn.Conv2d(1, 1, 5, padding=(2, 1), padding_mode=\"reflect\")\n",
-    "        self.conv5 = nn.Conv2d(1, 1, 5, padding=(2, 1), padding_mode=\"reflect\")\n",
-    "        self.pool = nn.MaxPool1d(1, 3)\n",
-    "        self.softmax = nn.Softmax(dim=1)\n",
+    "        self.conv1 = nn.Conv2d(1, 3, 5)\n",
+    "        self.pool1 = nn.MaxPool2d(2, 2)\n",
+    "        self.conv2 = nn.Conv2d(3, 8, 2)\n",
+    "        self.linear1 = nn.Linear(8 * 2 * 3, 8 * 3)\n",
+    "        self.linear2 = nn.Linear(24, 8)\n",
+    "        self.linear3 = nn.Linear(8, 1)\n",
     "        self.to(device)\n",
     "\n",
     "\n",
     "    def forward(self, x):\n",
     "        x = self.conv1(x)\n",
-    "        # print(x.shape)\n",
+    "        # print(\"Layer 1 output shape: \" + str(x.shape))\n",
+    "        x = self.pool1(x)\n",
+    "        # print(\"Pool 1 output shape: \" + str(x.shape))\n",
     "        x = self.conv2(x)\n",
-    "        # print(x.shape)\n",
-    "        x = self.conv3(x)\n",
-    "        # print(x.shape)\n",
-    "        x = self.conv4(x)\n",
-    "        # print(x.shape)\n",
-    "        x = self.conv5(x)\n",
-    "        # print(x.shape)\n",
-    "        x = self.pool(x)\n",
-    "        # print(x.shape)\n",
-    "        x = self.softmax(x)\n",
+    "        # print(\"Layer 2 output shape: \" + str(x.shape))\n",
+    "        x = torch.flatten(x, 1) # flatten\n",
+    "        # print(\"Flattened shape: \" + str(x.shape))\n",
+    "        x = self.linear1(x)\n",
+    "        # print(\"Linear 1 output shape: \" + str(x.shape))\n",
+    "        x = self.linear2(x)\n",
+    "        # print(\"Linear 2 output shape: \" + str(x.shape))\n",
+    "        x = self.linear3(x)\n",
+    "        # print(\"Linear 3 output shape: \" + str(x.shape))\n",
+    "        x = torch.sigmoid(x)\n",
     "        return x"
    ],
    "metadata": {
@@ -79,14 +80,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": null,
    "outputs": [
     {
-     "name": "stdout",
+     "name": "stderr",
      "output_type": "stream",
      "text": [
-      "input shapetorch.Size([1, 70322, 13])\n",
-      "output shapetorch.Size([1, 70322, 1])\n"
+      " 84%|████████▎ | 58846/70312 [04:49<01:58, 96.46it/s]  "
      ]
     }
    ],
@@ -94,23 +94,25 @@
     "import DataImport\n",
     "INPUT_FILE = \"train.csv\"\n",
     "\n",
+    "print(\"Importing Data...\")\n",
     "x_train, y_train = DataImport.import_data(INPUT_FILE, DEVICE)\n",
     "model = CNNModel()\n",
-    "print(\"input shape\" + str(x_train.shape))\n",
+    "print(\"input shape \" + str(x_train.shape))\n",
     "test_output = model(x_train)\n",
-    "print(\"output shape\" + str(test_output.shape))\n",
+    "print(\"output shape: \" + str(test_output.shape))\n",
     "# print(test_output)"
    ],
    "metadata": {
     "collapsed": false,
     "pycharm": {
-     "name": "#%%\n"
+     "name": "#%%\n",
+     "is_executing": true
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": null,
    "outputs": [],
    "source": [
     "def train(model, x_train, y_train, n_epochs=5, lr=0.0001):\n",
@@ -122,18 +124,17 @@
     "        optimizer.zero_grad()\n",
     "\n",
     "        output_train = model(x_train)\n",
-    "        output_train = output_train.reshape((output_train.shape[1], output_train.shape[2]))\n",
     "        # print(output_train)\n",
     "        loss_train = criterion(output_train, y_train)\n",
     "        loss_train.backward()\n",
     "        optimizer.step()\n",
     "        loss_value = loss_train.item()\n",
     "        losses.append(loss_value)\n",
-    "        if epoch % 100 == 0:\n",
+    "        if epoch % 1 == 0:\n",
     "            print(\"Epoch {}: loss = {}\".format(str(epoch), str(loss_value)))\n",
     "\n",
-    "        if len(output_train.nonzero()) == 0:        # not sure if this works\n",
-    "            print(\"Epoch {}: all zero output!\".format(str(epoch)))\n",
+    "        # if len(output_train.nonzero()) == 0:        # not sure if this works\n",
+    "        #     print(\"Epoch {}: all zero output!\".format(str(epoch)))\n",
     "\n",
     "    return losses\n",
     "\n",
@@ -164,36 +165,15 @@
    "metadata": {
     "collapsed": false,
     "pycharm": {
-     "name": "#%%\n"
+     "name": "#%%\n",
+     "is_executing": true
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "  1%|          | 1/100 [00:00<00:35,  2.78it/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Epoch 0: loss = 51.798866271972656\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 100/100 [00:33<00:00,  2.97it/s]\n"
-     ]
-    }
-   ],
+   "execution_count": null,
+   "outputs": [],
    "source": [
     "model = CNNModel(DEVICE)\n",
     "losses = train(model, x_train, y_train, n_epochs=100, lr=0.001)\n",
@@ -202,45 +182,39 @@
    "metadata": {
     "collapsed": false,
     "pycharm": {
-     "name": "#%%\n"
+     "name": "#%%\n",
+     "is_executing": true
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[48.201131935951764, tensor(0.), tensor(0.)]\n"
-     ]
-    }
-   ],
+   "execution_count": null,
+   "outputs": [],
    "source": [
     "with torch.no_grad():\n",
     "    y_prediction = model(x_train)\n",
-    "    y_prediction = y_prediction.reshape((y_prediction.shape[1], y_prediction.shape[2]))\n",
     "    evauluation_result = calc_acc(y_prediction, y_train)\n",
     "    print(evauluation_result)"
    ],
    "metadata": {
     "collapsed": false,
     "pycharm": {
-     "name": "#%%\n"
+     "name": "#%%\n",
+     "is_executing": true
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": null,
    "outputs": [],
    "source": [],
    "metadata": {
     "collapsed": false,
     "pycharm": {
-     "name": "#%%\n"
+     "name": "#%%\n",
+     "is_executing": true
     }
    }
   }
