Slightly modified 2nd model

--- a/CNNModel.ipynb
+++ b/CNNModel.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 52,
    "metadata": {
     "collapsed": true,
     "pycharm": {
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 53,
    "outputs": [],
    "source": [
     "DEBUG = True\n",
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 54,
    "outputs": [],
    "source": [
     "class CNNModel(nn.Module):\n",
@@ -80,13 +80,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 55,
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Importing Data...\n"
+     ]
+    },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 84%|████████▎ | 58846/70312 [04:49<01:58, 96.46it/s]  "
+      "100%|██████████| 70312/70312 [07:14<00:00, 161.86it/s] \n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "input shape torch.Size([70322, 1, 11, 13])\n",
+      "output shape: torch.Size([70322, 1])\n"
      ]
     }
    ],
@@ -105,14 +120,13 @@
    "metadata": {
     "collapsed": false,
     "pycharm": {
-     "name": "#%%\n",
-     "is_executing": true
+     "name": "#%%\n"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 56,
    "outputs": [],
    "source": [
     "def train(model, x_train, y_train, n_epochs=5, lr=0.0001):\n",
@@ -130,7 +144,7 @@
     "        optimizer.step()\n",
     "        loss_value = loss_train.item()\n",
     "        losses.append(loss_value)\n",
-    "        if epoch % 1 == 0:\n",
+    "        if epoch % 100 == 0:\n",
     "            print(\"Epoch {}: loss = {}\".format(str(epoch), str(loss_value)))\n",
     "\n",
     "        # if len(output_train.nonzero()) == 0:        # not sure if this works\n",
@@ -165,32 +179,186 @@
    "metadata": {
     "collapsed": false,
     "pycharm": {
-     "name": "#%%\n",
-     "is_executing": true
+     "name": "#%%\n"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
+   "execution_count": 57,
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "  0%|          | 1/1000 [00:00<11:28,  1.45it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 0: loss = 1.4922934770584106\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 10%|█         | 101/1000 [01:04<09:30,  1.58it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 100: loss = 0.7421825528144836\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 20%|██        | 201/1000 [02:10<08:21,  1.59it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 200: loss = 0.7352596521377563\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 30%|███       | 301/1000 [03:17<08:01,  1.45it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 300: loss = 0.7319010496139526\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 40%|████      | 401/1000 [04:26<07:42,  1.29it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 400: loss = 0.7302696108818054\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 50%|█████     | 501/1000 [05:31<05:23,  1.54it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 500: loss = 0.7264845371246338\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 60%|██████    | 601/1000 [06:33<04:12,  1.58it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 600: loss = 0.7244583964347839\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 70%|███████   | 701/1000 [07:42<03:17,  1.51it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 700: loss = 0.7240389585494995\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 80%|████████  | 801/1000 [08:48<02:18,  1.43it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 800: loss = 0.7237185835838318\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 90%|█████████ | 901/1000 [09:53<01:05,  1.51it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 900: loss = 0.7234734892845154\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 1000/1000 [10:57<00:00,  1.52it/s]\n"
+     ]
+    }
+   ],
    "source": [
     "model = CNNModel(DEVICE)\n",
-    "losses = train(model, x_train, y_train, n_epochs=100, lr=0.001)\n",
+    "losses = train(model, x_train, y_train, n_epochs=1000, lr=0.0002)\n",
     "# print(losses)"
    ],
    "metadata": {
     "collapsed": false,
     "pycharm": {
-     "name": "#%%\n",
-     "is_executing": true
+     "name": "#%%\n"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
+   "execution_count": 58,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[48.21250817667302, tensor(62.9630), tensor(0.0467)]\n"
+     ]
+    }
+   ],
    "source": [
     "with torch.no_grad():\n",
     "    y_prediction = model(x_train)\n",
@@ -200,21 +368,19 @@
    "metadata": {
     "collapsed": false,
     "pycharm": {
-     "name": "#%%\n",
-     "is_executing": true
+     "name": "#%%\n"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 58,
    "outputs": [],
    "source": [],
    "metadata": {
     "collapsed": false,
     "pycharm": {
-     "name": "#%%\n",
-     "is_executing": true
+     "name": "#%%\n"
     }
    }
   }
